final (I hope!) fix for protorel redirects
* consolidate some project domains into redirects.dat from other conf
  and removed some redirect hops (where refreshDomainRedirects
  complained)
  * mediawiki.org
  * wikimedia.org
  * wikinews.org
  * wikiquote.org
  * wikiversity.org
  * wikivoyage.org
  * wikibooks.org
  * wiktionary.org
  * wikidata.org
  * www.wikisource.org

* cleaned up wikibooks/wikijunior in redirects.dat (and made protorel)
* force HTTPS for redirects on wikis that already force HTTPS
* rm backward compatibility redirects (e.g. UseMod) for newer wikis
  and private wikis
* redirect to lists.wikimedia.org instead of mail.wikipedia.org!!

RT: 1668
Bug: 31369
Change-Id: I27300f33a644f09379bc58613da4f702dfca684e

--- a/redirects.conf
+++ b/redirects.conf
@@ -337,11 +337,19 @@
 	bugzilla.wikipedia.org \
 	bugs.mediawiki.org \
 	bugzilla.mediawiki.org \
-	mediawiki.org \
 	wiki.mediawiki.org \
 	doc.mediawiki.org \
 	integration.mediawiki.org \
 	nostalgia.wikimedia.org \
+	mediawiki.org \
+	wikimedia.org \
+	wikinews.org \
+	wikiquote.org \
+	wikiversity.org \
+	wikivoyage.org \
+	wiktionary.org \
+	wikidata.org \
+	www.wikisource.org \
 	ch.wikimedia.org \
 	hu.wikimedia.org \
 	it.wikimedia.org \
@@ -378,12 +386,18 @@
 	RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
 
 	# Type: plainOverride
-	# override	wikibooks.org/	http://en.wikibooks.org/wiki/Wikibooks_portal
+	# override	wikibooks.org/	//www.wikibooks.org
 	RewriteCond %{HTTP_HOST} =wikibooks.org
-	RewriteRule ^/$ http://en.wikibooks.org/wiki/Wikibooks_portal [R=301,L,NE]
-	# override	wikibooks.com/	http://en.wikibooks.org/wiki/Wikibooks_portal
+	RewriteRule ^/$ %{ENV:HTTP_X_Forwarded_Proto}://www.wikibooks.org/ [R=301,L,NE]
+	# override	wikibooks.com/	//www.wikibooks.org
 	RewriteCond %{HTTP_HOST} =wikibooks.com
-	RewriteRule ^/$ http://en.wikibooks.org/wiki/Wikibooks_portal [R=301,L,NE]
+	RewriteRule ^/$ %{ENV:HTTP_X_Forwarded_Proto}://www.wikibooks.org/ [R=301,L,NE]
+	# override	wikibook.org/	//www.wikibooks.org
+	RewriteCond %{HTTP_HOST} =wikibook.org
+	RewriteRule ^/$ %{ENV:HTTP_X_Forwarded_Proto}://www.wikibooks.org/ [R=301,L,NE]
+	# override	wikibook.com/	//www.wikibooks.org
+	RewriteCond %{HTTP_HOST} =wikibook.com
+	RewriteRule ^/$ %{ENV:HTTP_X_Forwarded_Proto}://www.wikibooks.org/ [R=301,L,NE]
 	# override	education.wikimedia.org/evaluating	//commons.wikimedia.org/wiki/File:Evaluating_Wikipedia_brochure.pdf
 	RewriteCond %{HTTP_HOST} =education.wikimedia.org
 	RewriteRule ^/evaluating$ %{ENV:HTTP_X_Forwarded_Proto}://commons.wikimedia.org/wiki/File:Evaluating_Wikipedia_brochure.pdf [R=301,L,NE]
@@ -775,21 +789,21 @@
 	# rewrite	wikiquote.net	//www.wikiquote.org
 	RewriteCond %{HTTP_HOST} =wikiquote.net
 	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://www.wikiquote.org$0 [R=301,L,NE]
-	# rewrite	wikinews.com	//wikinews.org
+	# rewrite	wikinews.com	//www.wikinews.org
 	RewriteCond %{HTTP_HOST} =wikinews.com
-	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://wikinews.org$0 [R=301,L,NE]
+	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://www.wikinews.org$0 [R=301,L,NE]
 	# rewrite	species.wikipedia.org	//species.wikimedia.org
 	RewriteCond %{HTTP_HOST} =species.wikipedia.org
 	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://species.wikimedia.org$0 [R=301,L,NE]
-	# rewrite	wikiversity.com	//wikiversity.org
+	# rewrite	wikiversity.com	//www.wikiversity.org
 	RewriteCond %{HTTP_HOST} =wikiversity.com
-	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://wikiversity.org$0 [R=301,L,NE]
-	# rewrite	wikiversity.net	//wikiversity.org
+	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://www.wikiversity.org$0 [R=301,L,NE]
+	# rewrite	wikiversity.net	//www.wikiversity.org
 	RewriteCond %{HTTP_HOST} =wikiversity.net
-	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://wikiversity.org$0 [R=301,L,NE]
-	# rewrite	wikiversity.info	//wikiversity.org
+	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://www.wikiversity.org$0 [R=301,L,NE]
+	# rewrite	wikiversity.info	//www.wikiversity.org
 	RewriteCond %{HTTP_HOST} =wikiversity.info
-	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://wikiversity.org$0 [R=301,L,NE]
+	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://www.wikiversity.org$0 [R=301,L,NE]
 	# rewrite	wikivoyage.com	//www.wikivoyage.org
 	RewriteCond %{HTTP_HOST} =wikivoyage.com
 	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://www.wikivoyage.org$0 [R=301,L,NE]
@@ -850,9 +864,6 @@
 	# rewrite	bugzilla.mediawiki.org	https://bugzilla.wikimedia.org
 	RewriteCond %{HTTP_HOST} =bugzilla.mediawiki.org
 	RewriteRule .* https://bugzilla.wikimedia.org$0 [R=301,L,NE]
-	# rewrite	mediawiki.org	//www.mediawiki.org
-	RewriteCond %{HTTP_HOST} =mediawiki.org
-	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://www.mediawiki.org$0 [R=301,L,NE]
 	# rewrite	wiki.mediawiki.org	//www.mediawiki.org
 	RewriteCond %{HTTP_HOST} =wiki.mediawiki.org
 	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://www.mediawiki.org$0 [R=301,L,NE]
@@ -865,6 +876,36 @@
 	# rewrite	nostalgia.wikimedia.org	//nostalgia.wikipedia.org
 	RewriteCond %{HTTP_HOST} =nostalgia.wikimedia.org
 	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://nostalgia.wikipedia.org$0 [R=301,L,NE]
+	# rewrite	mediawiki.org	//www.mediawiki.org
+	RewriteCond %{HTTP_HOST} =mediawiki.org
+	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://www.mediawiki.org$0 [R=301,L,NE]
+	# rewrite	wikimedia.org	//www.wikimedia.org
+	RewriteCond %{HTTP_HOST} =wikimedia.org
+	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://www.wikimedia.org$0 [R=301,L,NE]
+	# rewrite	wikinews.org	//www.wikinews.org
+	RewriteCond %{HTTP_HOST} =wikinews.org
+	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://www.wikinews.org$0 [R=301,L,NE]
+	# rewrite	wikiquote.org	//www.wikiquote.org
+	RewriteCond %{HTTP_HOST} =wikiquote.org
+	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://www.wikiquote.org$0 [R=301,L,NE]
+	# rewrite	wikiversity.org	//www.wikiversity.org
+	RewriteCond %{HTTP_HOST} =wikiversity.org
+	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://www.wikiversity.org$0 [R=301,L,NE]
+	# rewrite	wikivoyage.org	//www.wikivoyage.org
+	RewriteCond %{HTTP_HOST} =wikivoyage.org
+	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://www.wikivoyage.org$0 [R=301,L,NE]
+	# rewrite	wikibooks.org	//www.wikibooks.org
+	RewriteCond %{HTTP_HOST} =wikibooks.org
+	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://www.wikibooks.org$0 [R=301,L,NE]
+	# rewrite	wiktionary.org	//www.wiktionary.org
+	RewriteCond %{HTTP_HOST} =wiktionary.org
+	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://www.wiktionary.org$0 [R=301,L,NE]
+	# rewrite	wikidata.org	//www.wikidata.org #bug 45005
+	RewriteCond %{HTTP_HOST} =wikidata.org
+	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://www.wikidata.org$0 [R=301,L,NE]
+	# rewrite	www.wikisource.org	//wikisource.org
+	RewriteCond %{HTTP_HOST} =www.wikisource.org
+	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://wikisource.org$0 [R=301,L,NE]
 	# funnel	ch.wikimedia.org	//www.wikimedia.ch
 	RewriteCond %{HTTP_HOST} =ch.wikimedia.org
 	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://www.wikimedia.ch/ [R=301,L,NE]
@@ -900,24 +941,24 @@
 	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://m.wikipedia.org/ [R=301,L,NE]
 
 	# Type: wildcard
-	# funnel	*wikijunior.com	http://en.wikibooks.org/wiki/Wikijunior
+	# funnel	*wikijunior.com	//en.wikibooks.org/wiki/Wikijunior
 	RewriteCond %{HTTP_HOST} =wikijunior.com
-	RewriteRule . http://en.wikibooks.org/wiki/Wikijunior [R=301,L,NE]
-	# funnel	*wikijunior.com	http://en.wikibooks.org/wiki/Wikijunior
+	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://en.wikibooks.org/wiki/Wikijunior [R=301,L,NE]
+	# funnel	*wikijunior.com	//en.wikibooks.org/wiki/Wikijunior
 	RewriteCond %{HTTP_HOST} ^(.+)\.wikijunior\.com$
-	RewriteRule . http://en.wikibooks.org/wiki/Wikijunior [R=301,L,NE]
-	# funnel	*wikijunior.org	http://en.wikibooks.org/wiki/Wikijunior
+	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://en.wikibooks.org/wiki/Wikijunior [R=301,L,NE]
+	# funnel	*wikijunior.org	//en.wikibooks.org/wiki/Wikijunior
 	RewriteCond %{HTTP_HOST} =wikijunior.org
-	RewriteRule . http://en.wikibooks.org/wiki/Wikijunior [R=301,L,NE]
-	# funnel	*wikijunior.org	http://en.wikibooks.org/wiki/Wikijunior
+	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://en.wikibooks.org/wiki/Wikijunior [R=301,L,NE]
+	# funnel	*wikijunior.org	//en.wikibooks.org/wiki/Wikijunior
 	RewriteCond %{HTTP_HOST} ^(.+)\.wikijunior\.org$
-	RewriteRule . http://en.wikibooks.org/wiki/Wikijunior [R=301,L,NE]
-	# funnel	*wikijunior.net	http://en.wikibooks.org/wiki/Wikijunior
+	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://en.wikibooks.org/wiki/Wikijunior [R=301,L,NE]
+	# funnel	*wikijunior.net	//en.wikibooks.org/wiki/Wikijunior
 	RewriteCond %{HTTP_HOST} =wikijunior.net
-	RewriteRule . http://en.wikibooks.org/wiki/Wikijunior [R=301,L,NE]
-	# funnel	*wikijunior.net	http://en.wikibooks.org/wiki/Wikijunior
+	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://en.wikibooks.org/wiki/Wikijunior [R=301,L,NE]
+	# funnel	*wikijunior.net	//en.wikibooks.org/wiki/Wikijunior
 	RewriteCond %{HTTP_HOST} ^(.+)\.wikijunior\.net$
-	RewriteRule . http://en.wikibooks.org/wiki/Wikijunior [R=301,L,NE]
+	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://en.wikibooks.org/wiki/Wikijunior [R=301,L,NE]
 	# funnel	*wikiartpedia.biz	//www.wikipedia.org
 	RewriteCond %{HTTP_HOST} =wikiartpedia.biz
 	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://www.wikipedia.org/ [R=301,L,NE]
@@ -1113,18 +1154,18 @@
 	# rewrite	*wikipedia.ee	//et.wikipedia.org
 	RewriteCond %{HTTP_HOST} ^(.+)\.wikipedia\.ee$
 	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://et.wikipedia.org$0 [R=301,L,NE]
-	# rewrite	*wikimedia.biz	//wikimedia.org
+	# rewrite	*wikimedia.biz	//www.wikimedia.org
 	RewriteCond %{HTTP_HOST} =wikimedia.biz
-	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://wikimedia.org$0 [R=301,L,NE]
-	# rewrite	*wikimedia.biz	//wikimedia.org
+	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://www.wikimedia.org$0 [R=301,L,NE]
+	# rewrite	*wikimedia.biz	//www.wikimedia.org
 	RewriteCond %{HTTP_HOST} ^(.+)\.wikimedia\.biz$
-	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://wikimedia.org$0 [R=301,L,NE]
-	# rewrite	*wikimedia.jp.net	//wikimedia.org
+	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://www.wikimedia.org$0 [R=301,L,NE]
+	# rewrite	*wikimedia.jp.net	//www.wikimedia.org
 	RewriteCond %{HTTP_HOST} =wikimedia.jp.net
-	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://wikimedia.org$0 [R=301,L,NE]
-	# rewrite	*wikimedia.jp.net	//wikimedia.org
+	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://www.wikimedia.org$0 [R=301,L,NE]
+	# rewrite	*wikimedia.jp.net	//www.wikimedia.org
 	RewriteCond %{HTTP_HOST} ^(.+)\.wikimedia\.jp\.net$
-	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://wikimedia.org$0 [R=301,L,NE]
+	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://www.wikimedia.org$0 [R=301,L,NE]
 	# rewrite	*wikimedia.lt	//wikimediafoundation.org
 	RewriteCond %{HTTP_HOST} =wikimedia.lt
 	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://wikimediafoundation.org$0 [R=301,L,NE]
@@ -1137,12 +1178,12 @@
 	# rewrite	*wikipedia.lt	//lt.wikipedia.org
 	RewriteCond %{HTTP_HOST} ^(.+)\.wikipedia\.lt$
 	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://lt.wikipedia.org$0 [R=301,L,NE]
-	# rewrite	*wikimemory.org	//wikimedia.org
+	# rewrite	*wikimemory.org	//www.wikimedia.org
 	RewriteCond %{HTTP_HOST} =wikimemory.org
-	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://wikimedia.org$0 [R=301,L,NE]
-	# rewrite	*wikimemory.org	//wikimedia.org
+	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://www.wikimedia.org$0 [R=301,L,NE]
+	# rewrite	*wikimemory.org	//www.wikimedia.org
 	RewriteCond %{HTTP_HOST} ^(.+)\.wikimemory\.org$
-	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://wikimedia.org$0 [R=301,L,NE]
+	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://www.wikimedia.org$0 [R=301,L,NE]
 	# rewrite	*en-wp.com	//en.wikipedia.org
 	RewriteCond %{HTTP_HOST} =en-wp.com
 	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://en.wikipedia.org$0 [R=301,L,NE]
