--- a/redirects.conf
+++ b/redirects.conf
@@ -496,64 +496,64 @@
 	RewriteRule ^/$ %{ENV:HTTP_X_Forwarded_Proto}://wikimediafoundation.org/wiki/Work_with_us [R=301,L,NE]
 
 	# Type: plain
-	# funnel	shop.wiktionary.org	//shop.wikimedia.org/
+	# funnel	shop.wiktionary.org	//shop.wikimedia.org
 	RewriteCond %{HTTP_HOST} =shop.wiktionary.org
 	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://shop.wikimedia.org/ [R=301,L,NE]
-	# funnel	store.wiktionary.org	//shop.wikimedia.org/
+	# funnel	store.wiktionary.org	//shop.wikimedia.org
 	RewriteCond %{HTTP_HOST} =store.wiktionary.org
 	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://shop.wikimedia.org/ [R=301,L,NE]
-	# funnel	shop.wikiquote.org	//shop.wikimedia.org/
+	# funnel	shop.wikiquote.org	//shop.wikimedia.org
 	RewriteCond %{HTTP_HOST} =shop.wikiquote.org
 	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://shop.wikimedia.org/ [R=301,L,NE]
-	# funnel	store.wikiquote.org	//shop.wikimedia.org/
+	# funnel	store.wikiquote.org	//shop.wikimedia.org
 	RewriteCond %{HTTP_HOST} =store.wikiquote.org
 	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://shop.wikimedia.org/ [R=301,L,NE]
-	# funnel	shop.wikibooks.org	//shop.wikimedia.org/
+	# funnel	shop.wikibooks.org	//shop.wikimedia.org
 	RewriteCond %{HTTP_HOST} =shop.wikibooks.org
 	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://shop.wikimedia.org/ [R=301,L,NE]
-	# funnel	store.wikibooks.org	//shop.wikimedia.org/
+	# funnel	store.wikibooks.org	//shop.wikimedia.org
 	RewriteCond %{HTTP_HOST} =store.wikibooks.org
 	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://shop.wikimedia.org/ [R=301,L,NE]
-	# funnel	shop.wikinews.org	//shop.wikimedia.org/
+	# funnel	shop.wikinews.org	//shop.wikimedia.org
 	RewriteCond %{HTTP_HOST} =shop.wikinews.org
 	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://shop.wikimedia.org/ [R=301,L,NE]
-	# funnel	store.wikinews.org	//shop.wikimedia.org/
+	# funnel	store.wikinews.org	//shop.wikimedia.org
 	RewriteCond %{HTTP_HOST} =store.wikinews.org
 	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://shop.wikimedia.org/ [R=301,L,NE]
-	# funnel	shop.wikisource.org	//shop.wikimedia.org/
+	# funnel	shop.wikisource.org	//shop.wikimedia.org
 	RewriteCond %{HTTP_HOST} =shop.wikisource.org
 	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://shop.wikimedia.org/ [R=301,L,NE]
-	# funnel	store.wikisource.org	//shop.wikimedia.org/
+	# funnel	store.wikisource.org	//shop.wikimedia.org
 	RewriteCond %{HTTP_HOST} =store.wikisource.org
 	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://shop.wikimedia.org/ [R=301,L,NE]
-	# funnel	shop.wikiversity.org	//shop.wikimedia.org/
+	# funnel	shop.wikiversity.org	//shop.wikimedia.org
 	RewriteCond %{HTTP_HOST} =shop.wikiversity.org
 	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://shop.wikimedia.org/ [R=301,L,NE]
-	# funnel	store.wikiversity.org	//shop.wikimedia.org/
+	# funnel	store.wikiversity.org	//shop.wikimedia.org
 	RewriteCond %{HTTP_HOST} =store.wikiversity.org
 	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://shop.wikimedia.org/ [R=301,L,NE]
-	# funnel	shop.mediawiki.org	//shop.wikimedia.org/
+	# funnel	shop.mediawiki.org	//shop.wikimedia.org
 	RewriteCond %{HTTP_HOST} =shop.mediawiki.org
 	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://shop.wikimedia.org/ [R=301,L,NE]
-	# funnel	store.mediawiki.org	//shop.wikimedia.org/
+	# funnel	store.mediawiki.org	//shop.wikimedia.org
 	RewriteCond %{HTTP_HOST} =store.mediawiki.org
 	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://shop.wikimedia.org/ [R=301,L,NE]
-	# funnel	shop.wikimediafoundation.org	//shop.wikimedia.org/
+	# funnel	shop.wikimediafoundation.org	//shop.wikimedia.org
 	RewriteCond %{HTTP_HOST} =shop.wikimediafoundation.org
 	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://shop.wikimedia.org/ [R=301,L,NE]
-	# funnel	store.wikimediafoundation.org	//shop.wikimedia.org/
+	# funnel	store.wikimediafoundation.org	//shop.wikimedia.org
 	RewriteCond %{HTTP_HOST} =store.wikimediafoundation.org
 	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://shop.wikimedia.org/ [R=301,L,NE]
-	# funnel	shop.wikipedia.org	//shop.wikimedia.org/
+	# funnel	shop.wikipedia.org	//shop.wikimedia.org
 	RewriteCond %{HTTP_HOST} =shop.wikipedia.org
 	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://shop.wikimedia.org/ [R=301,L,NE]
-	# funnel	store.wikipedia.org	//shop.wikimedia.org/
+	# funnel	store.wikipedia.org	//shop.wikimedia.org
 	RewriteCond %{HTTP_HOST} =store.wikipedia.org
 	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://shop.wikimedia.org/ [R=301,L,NE]
-	# funnel	shop.wikipedia.com	//shop.wikimedia.org/
+	# funnel	shop.wikipedia.com	//shop.wikimedia.org
 	RewriteCond %{HTTP_HOST} =shop.wikipedia.com
 	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://shop.wikimedia.org/ [R=301,L,NE]
-	# funnel	store.wikipedia.com	//shop.wikimedia.org/
+	# funnel	store.wikipedia.com	//shop.wikimedia.org
 	RewriteCond %{HTTP_HOST} =store.wikipedia.com
 	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://shop.wikimedia.org/ [R=301,L,NE]
 	# rewrite	donate.mediawiki.org	https://donate.wikimedia.org
@@ -880,7 +880,7 @@
 	# funnel	pk.wikimedia.org	//meta.wikimedia.org/wiki/Wikimedia_Community_User_Group_Pakistan
 	RewriteCond %{HTTP_HOST} =pk.wikimedia.org
 	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://meta.wikimedia.org/wiki/Wikimedia_Community_User_Group_Pakistan [R=301,L,NE]
-	# funnel	pt.wikimedia.org	http://wikimedia.pt/
+	# funnel	pt.wikimedia.org	http://wikimedia.pt
 	RewriteCond %{HTTP_HOST} =pt.wikimedia.org
 	RewriteRule . http://wikimedia.pt/ [R=301,L,NE]
 	# rewrite	ve.wikimedia.org	http://wikimedia.org.ve
@@ -889,7 +889,7 @@
 	# rewrite	wikimania.wikimedia.org	//wikimania2014.wikimedia.org
 	RewriteCond %{HTTP_HOST} =wikimania.wikimedia.org
 	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://wikimania2014.wikimedia.org$0 [R=301,L,NE]
-	# funnel	labs.wikimedia.org	https://wikitech.wikimedia.org/
+	# funnel	labs.wikimedia.org	https://wikitech.wikimedia.org
 	RewriteCond %{HTTP_HOST} =labs.wikimedia.org
 	RewriteRule . https://wikitech.wikimedia.org/ [R=301,L,NE]
 	# funnel	coffee.wikimedia.org	//en.wikipedia.org/wiki/Hyper_Text_Coffee_Pot_Control_Protocol
