docs/integration.mediawiki.org to wikimedia.org
gallium serves HTTP and HTTPS on its public IP for the following
domains:

 integration.mediawiki.org
 docs.mediawiki.org

 integration.wikimedia.org
 docs.wikimedia.org

This patch moves the mediawiki.org entries to the production cluster and
let Apache handle redirects to the misc varnish which would host the
wikimedia.org entries.

Varnish conf: https://gerrit.wikimedia.org/r/#/c/105939/

RT #6593
RT #6594

Change-Id: I4d00cce7d27657c06023bc5f3b222908d9399e9c

--- a/redirects.conf
+++ b/redirects.conf
@@ -335,6 +335,8 @@
 	bugzilla.mediawiki.org \
 	mediawiki.org \
 	wiki.mediawiki.org \
+	docs.mediawiki.org \
+	integration.mediawiki.org \
 	nostalgia.wikimedia.org \
 	hu.wikimedia.org \
 	it.wikimedia.org \
@@ -839,6 +841,12 @@
 	# rewrite	wiki.mediawiki.org	//www.mediawiki.org
 	RewriteCond %{HTTP_HOST} =wiki.mediawiki.org
 	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://www.mediawiki.org$0 [R=301,L,NE]
+	# funnel	docs.mediawiki.org	https://docs.wikimedia.org
+	RewriteCond %{HTTP_HOST} =docs.mediawiki.org
+	RewriteRule . https://docs.wikimedia.org/ [R=301,L,NE]
+	# funnel	integration.mediawiki.org	https://integration.wikimedia.org
+	RewriteCond %{HTTP_HOST} =integration.mediawiki.org
+	RewriteRule . https://integration.wikimedia.org/ [R=301,L,NE]
 	# rewrite	nostalgia.wikimedia.org	//nostalgia.wikipedia.org
 	RewriteCond %{HTTP_HOST} =nostalgia.wikimedia.org
 	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://nostalgia.wikipedia.org$0 [R=301,L,NE]
