Set up redirects for toolserver.org
Bug: 60238
Change-Id: I6c320b1d46176aca6b29731527530461f1696fd5

--- a/all.conf
+++ b/all.conf
@@ -33,4 +33,7 @@ Include /etc/apache2/wmf/wikimedia.conf
 # wikimediafoundation.org and its aliases
 Include /etc/apache2/wmf/foundation.conf
 
+# toolserver.org and its subdomains
+Include /etc/apache2/wmf/toolserver.conf
+
 # vim: syn=apache sts=4 sw=4 autoindent
