Redirect pywikipedia.org to Tools
Bug: 58803
Change-Id: I5084c1238a22958627c609274c8fa00f367ceaf5

--- a/redirects.conf
+++ b/redirects.conf
@@ -220,6 +220,8 @@
 	*.jobs.wikipedia.org \
 	*.mobile.wikipedia.org \
 	*.wap.wikipedia.org \
+	pywikipedia.org \
+	*.pywikipedia.org \
 	shop.wiktionary.org \
 	store.wiktionary.org \
 	shop.wikiquote.org \
@@ -1552,5 +1554,11 @@
 	# rewrite	*.wap.wikipedia.org	//*.m.wikipedia.org
 	RewriteCond %{HTTP_HOST} ^(.+)\.wap\.wikipedia\.org$
 	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://%1.m.wikipedia.org$0 [R=301,L,NE]
+	# funnel	*pywikipedia.org	//tools.wmflabs.org/pywikibot/
+	RewriteCond %{HTTP_HOST} =pywikipedia.org
+	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://tools.wmflabs.org/pywikibot/ [R=301,L,NE]
+	# funnel	*pywikipedia.org	//tools.wmflabs.org/pywikibot/
+	RewriteCond %{HTTP_HOST} ^(.+)\.pywikipedia\.org$
+	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://tools.wmflabs.org/pywikibot/ [R=301,L,NE]
 </VirtualHost>
 # vim: sts=4 sw=4 autoindent syn=apache
