Redirect pywikipedia.org to Tools
Bug: 58803
Change-Id: I5084c1238a22958627c609274c8fa00f367ceaf5

--- a/redirects.conf
+++ b/redirects.conf
@@ -350,6 +350,8 @@
 	labs.wikimedia.org \
 	coffee.wikimedia.org \
 	mobile.wikipedia.org \
+	pywikipedia.org \
+	www.pywikipedia.org \
 
 	# allow caching for redirects
 	<IfModule mod_headers.c>
@@ -886,6 +888,12 @@
 	# funnel	mobile.wikipedia.org	//m.wikipedia.org
 	RewriteCond %{HTTP_HOST} =mobile.wikipedia.org
 	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://m.wikipedia.org/ [R=301,L,NE]
+	# funnel pywikipedia.org       //tools.wmflabs.org/pywikibot/
+	RewriteCond %{HTTP_HOST} =pywikipedia.org
+	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://tools.wmflabs.org/pywikibot/ [R=301,L,NE]
+	# funnel www.pywikipedia.org   //tools.wmflabs.org/pywikibot/
+	RewriteCond %{HTTP_HOST} =www.pywikipedia.org
+	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://tools.wmflabs.org/pywikibot/ [R=301,L,NE]
 
 	# Type: wildcard
 	# funnel	*wikijunior.com	http://en.wikibooks.org/wiki/Wikijunior
