funnel instead of redirect historic Bugzilla URLs
the intention is to fix RT #2675

SSL certificate errors when connecting to

https://bugzilla.wikipedia.org

and related by using funnel instead of redirect,

as f.e. doc.mediawiki.org does it for comparsion

Change-Id: I68a9907eaeafef115bfa81f0c728e383010b5423

--- a/redirects.conf
+++ b/redirects.conf
@@ -826,15 +826,15 @@
 	# rewrite	quality.wikipedia.com	//quality.wikimedia.org
 	RewriteCond %{HTTP_HOST} =quality.wikipedia.com
 	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://quality.wikimedia.org$0 [R=301,L,NE]
-	# rewrite	bugzilla.wikipedia.org	https://bugzilla.wikimedia.org
+	# funnel	bugzilla.wikipedia.org	https://bugzilla.wikimedia.org
 	RewriteCond %{HTTP_HOST} =bugzilla.wikipedia.org
-	RewriteRule .* https://bugzilla.wikimedia.org$0 [R=301,L,NE]
-	# rewrite	bugs.mediawiki.org	https://bugzilla.wikimedia.org
+	RewriteRule . https://bugzilla.wikimedia.org/ [R=301,L,NE]
+	# funnel	bugs.mediawiki.org	https://bugzilla.wikimedia.org
 	RewriteCond %{HTTP_HOST} =bugs.mediawiki.org
-	RewriteRule .* https://bugzilla.wikimedia.org$0 [R=301,L,NE]
-	# rewrite	bugzilla.mediawiki.org	https://bugzilla.wikimedia.org
+	RewriteRule . https://bugzilla.wikimedia.org/ [R=301,L,NE]
+	# funnel	bugzilla.mediawiki.org	https://bugzilla.wikimedia.org
 	RewriteCond %{HTTP_HOST} =bugzilla.mediawiki.org
-	RewriteRule .* https://bugzilla.wikimedia.org$0 [R=301,L,NE]
+	RewriteRule . https://bugzilla.wikimedia.org/ [R=301,L,NE]
 	# rewrite	mediawiki.org	//www.mediawiki.org
 	RewriteCond %{HTTP_HOST} =mediawiki.org
 	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://www.mediawiki.org$0 [R=301,L,NE]
