Add variant rewrites for zhwikivoyage
Bug: 60473
Change-Id: I16d961e0774f43ac8902378d4b7af2f120f43e49

--- a/main.conf
+++ b/main.conf
@@ -726,6 +726,16 @@
         </IfModule>
     </Directory>
 
+    # Variant aliases
+    Alias /zh /usr/local/apache/common/docroot/wikivoyage.org/w/index.php
+    Alias /zh-hans /usr/local/apache/common/docroot/wikivoyage.org/w/index.php
+    Alias /zh-hant /usr/local/apache/common/docroot/wikivoyage.org/w/index.php
+    Alias /zh-cn /usr/local/apache/common/docroot/wikivoyage.org/w/index.php
+    Alias /zh-hk /usr/local/apache/common/docroot/wikivoyage.org/w/index.php
+    Alias /zh-mo /usr/local/apache/common/docroot/wikivoyage.org/w/index.php
+    Alias /zh-my /usr/local/apache/common/docroot/wikivoyage.org/w/index.php
+    Alias /zh-sg /usr/local/apache/common/docroot/wikivoyage.org/w/index.php
+    Alias /zh-tw /usr/local/apache/common/docroot/wikivoyage.org/w/index.php
 </VirtualHost>
 
 LoadModule deflate_module /usr/lib/apache2/modules/mod_deflate.so
