Send Vary header on http to http redirect
Use the technique discovered by Ori in Id2cc29f to work around an Apache
"feature" that strips headers from the response when generating a 30x
response. Sets a "ProtoRedirect" environment variable with the
RewriteRule that triggers the 30x response and then adds a "Vary:
X-Forwarded-Proto" header later in the Apache response cycle.

Change-Id: I46ec415af61e42411aec2627dee20abe5463bf0e

--- a/remnant.conf
+++ b/remnant.conf
@@ -131,7 +131,10 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://grants.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://grants.wikimedia.org/$1 [R=301,L,E=ProtoRedirect]
+    <IfModule mod_headers.c>
+        Header always merge Vary X-Forwarded-Proto env=ProtoRedirect
+    </IfModule>
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/grants/w/index.php
@@ -168,7 +171,10 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://fdc.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://fdc.wikimedia.org/$1 [R=301,L,E=ProtoRedirect]
+    <IfModule mod_headers.c>
+        Header always merge Vary X-Forwarded-Proto env=ProtoRedirect
+    </IfModule>
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/fdc/w/index.php
@@ -205,7 +211,10 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://internal.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://internal.wikimedia.org/$1 [R=301,L,E=ProtoRedirect]
+    <IfModule mod_headers.c>
+        Header always merge Vary X-Forwarded-Proto env=ProtoRedirect
+    </IfModule>
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/internal/w/index.php
@@ -242,7 +251,10 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://board.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://board.wikimedia.org/$1 [R=301,L,E=ProtoRedirect]
+    <IfModule mod_headers.c>
+        Header always merge Vary X-Forwarded-Proto env=ProtoRedirect
+    </IfModule>
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/board/w/index.php
@@ -279,7 +291,10 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://boardgovcom.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://boardgovcom.wikimedia.org/$1 [R=301,L,E=ProtoRedirect]
+    <IfModule mod_headers.c>
+        Header always merge Vary X-Forwarded-Proto env=ProtoRedirect
+    </IfModule>
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/boardgovcom/w/index.php
@@ -316,7 +331,10 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://spcom.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://spcom.wikimedia.org/$1 [R=301,L,E=ProtoRedirect]
+    <IfModule mod_headers.c>
+        Header always merge Vary X-Forwarded-Proto env=ProtoRedirect
+    </IfModule>
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/spcom/w/index.php
@@ -353,7 +371,10 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://chapcom.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://chapcom.wikimedia.org/$1 [R=301,L,E=ProtoRedirect]
+    <IfModule mod_headers.c>
+        Header always merge Vary X-Forwarded-Proto env=ProtoRedirect
+    </IfModule>
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/chapcom/w/index.php
@@ -463,7 +484,10 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://searchcom.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://searchcom.wikimedia.org/$1 [R=301,L,E=ProtoRedirect]
+    <IfModule mod_headers.c>
+        Header always merge Vary X-Forwarded-Proto env=ProtoRedirect
+    </IfModule>
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/searchcom/w/index.php
@@ -570,7 +594,10 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://office.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://office.wikimedia.org/$1 [R=301,L,E=ProtoRedirect]
+    <IfModule mod_headers.c>
+        Header always merge Vary X-Forwarded-Proto env=ProtoRedirect
+    </IfModule>
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/office/w/index.php
@@ -608,7 +635,10 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://chair.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://chair.wikimedia.org/$1 [R=301,L,E=ProtoRedirect]
+    <IfModule mod_headers.c>
+        Header always merge Vary X-Forwarded-Proto env=ProtoRedirect
+    </IfModule>
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/chair/w/index.php
@@ -680,7 +710,10 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://auditcom.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://auditcom.wikimedia.org/$1 [R=301,L,E=ProtoRedirect]
+    <IfModule mod_headers.c>
+        Header always merge Vary X-Forwarded-Proto env=ProtoRedirect
+    </IfModule>
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/auditcom/w/index.php
@@ -754,7 +787,10 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://otrs-wiki.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://otrs-wiki.wikimedia.org/$1 [R=301,L,E=ProtoRedirect]
+    <IfModule mod_headers.c>
+        Header always merge Vary X-Forwarded-Proto env=ProtoRedirect
+    </IfModule>
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/otrs-wiki/w/index.php
@@ -791,7 +827,10 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://exec.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://exec.wikimedia.org/$1 [R=301,L,E=ProtoRedirect]
+    <IfModule mod_headers.c>
+        Header always merge Vary X-Forwarded-Proto env=ProtoRedirect
+    </IfModule>
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/exec/w/index.php
@@ -828,7 +867,10 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://collab.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://collab.wikimedia.org/$1 [R=301,L,E=ProtoRedirect]
+    <IfModule mod_headers.c>
+        Header always merge Vary X-Forwarded-Proto env=ProtoRedirect
+    </IfModule>
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/collab/w/index.php
@@ -900,7 +942,10 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://movementroles.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://movementroles.wikimedia.org/$1 [R=301,L,E=ProtoRedirect]
+    <IfModule mod_headers.c>
+        Header always merge Vary X-Forwarded-Proto env=ProtoRedirect
+    </IfModule>
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/movementroles/w/index.php
@@ -937,7 +982,10 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://checkuser.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://checkuser.wikimedia.org/$1 [R=301,L,E=ProtoRedirect]
+    <IfModule mod_headers.c>
+        Header always merge Vary X-Forwarded-Proto env=ProtoRedirect
+    </IfModule>
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/checkuser/w/index.php
@@ -974,7 +1022,10 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://steward.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://steward.wikimedia.org/$1 [R=301,L,E=ProtoRedirect]
+    <IfModule mod_headers.c>
+        Header always merge Vary X-Forwarded-Proto env=ProtoRedirect
+    </IfModule>
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/steward/w/index.php
@@ -1011,7 +1062,10 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://ombudsmen.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://ombudsmen.wikimedia.org/$1 [R=301,L,E=ProtoRedirect]
+    <IfModule mod_headers.c>
+        Header always merge Vary X-Forwarded-Proto env=ProtoRedirect
+    </IfModule>
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/ombudsmen/w/index.php
