--- a/wikimedia.conf
+++ b/wikimedia.conf
@@ -123,7 +123,10 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://transitionteam.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://transitionteam.wikimedia.org/$1 [R=301,L,E=ProtoRedirect]
+    <IfModule mod_headers.c>
+        Header always merge Vary X-Forwarded-Proto env=ProtoRedirect
+    </IfModule>
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/transitionteam/w/index.php
@@ -160,7 +163,10 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://iegcom.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://iegcom.wikimedia.org/$1 [R=301,L,E=ProtoRedirect]
+    <IfModule mod_headers.c>
+        Header always merge Vary X-Forwarded-Proto env=ProtoRedirect
+    </IfModule>
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/iegcom/w/index.php
