--- a/main.conf
+++ b/main.conf
@@ -280,7 +280,10 @@
 
     # Push to SSL
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule (.) https://donate.wikimedia.org%{REQUEST_URI} [R=301]
+    RewriteRule (.) https://donate.wikimedia.org%{REQUEST_URI} [R=301,E=ProtoRedirect]
+    <IfModule mod_headers.c>
+        Header always merge Vary X-Forwarded-Proto env=ProtoRedirect
+    </IfModule>
 
     RewriteRule ^/$ https://donate.wikimedia.org/wiki/Special:FundraiserRedirector [R=302,L]
 
@@ -318,7 +321,10 @@
 
     # Push to SSL
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule (.) https://vote.wikimedia.org%{REQUEST_URI} [R=301]
+    RewriteRule (.) https://vote.wikimedia.org%{REQUEST_URI} [R=301,E=ProtoRedirect]
+    <IfModule mod_headers.c>
+        Header always merge Vary X-Forwarded-Proto env=ProtoRedirect
+    </IfModule>
 
     <Directory "/usr/local/apache/common/docroot/vote/w">
         <IfModule mod_php5.c>
