--- a/wikimania.conf
+++ b/wikimania.conf
@@ -58,7 +58,10 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://wikimaniateam.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://wikimaniateam.wikimedia.org/$1 [R=301,L,E=ProtoRedirect]
+    <IfModule mod_headers.c>
+        Header always merge Vary X-Forwarded-Proto env=ProtoRedirect
+    </IfModule>
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/wikimedia.org/w/index.php
