Send Vary header on http to https redirect
Use the technique discovered by Ori in Id2cc29f to work around an Apache
"feature" that strips headers from the response when generating a 30x
response. Sets a "RW_VARY_PROTO" environment variable with the
RewriteRule that triggers the 30x response and then adds a "Vary:
X-Forwarded-Proto" header later in the Apache response cycle.

Change-Id: I46ec415af61e42411aec2627dee20abe5463bf0e

--- a/remnant.conf
+++ b/remnant.conf
@@ -140,7 +140,8 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://grants.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://grants.wikimedia.org/$1 [R=301,L,E=RW_VARY_PROTO]
+    Header always merge Vary X-Forwarded-Proto env=RW_VARY_PROTO
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/grants/w/index.php
@@ -172,7 +173,8 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://fdc.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://fdc.wikimedia.org/$1 [R=301,L,E=RW_VARY_PROTO]
+    Header always merge Vary X-Forwarded-Proto env=RW_VARY_PROTO
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/fdc/w/index.php
@@ -204,7 +206,8 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://internal.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://internal.wikimedia.org/$1 [R=301,L,E=RW_VARY_PROTO]
+    Header always merge Vary X-Forwarded-Proto env=RW_VARY_PROTO
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/internal/w/index.php
@@ -236,7 +239,8 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://board.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://board.wikimedia.org/$1 [R=301,L,E=RW_VARY_PROTO]
+    Header always merge Vary X-Forwarded-Proto env=RW_VARY_PROTO
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/board/w/index.php
@@ -268,7 +272,8 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://boardgovcom.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://boardgovcom.wikimedia.org/$1 [R=301,L,E=RW_VARY_PROTO]
+    Header always merge Vary X-Forwarded-Proto env=RW_VARY_PROTO
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/boardgovcom/w/index.php
@@ -300,7 +305,8 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://spcom.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://spcom.wikimedia.org/$1 [R=301,L,E=RW_VARY_PROTO]
+    Header always merge Vary X-Forwarded-Proto env=RW_VARY_PROTO
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/spcom/w/index.php
@@ -332,7 +338,8 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://chapcom.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://chapcom.wikimedia.org/$1 [R=301,L,E=RW_VARY_PROTO]
+    Header always merge Vary X-Forwarded-Proto env=RW_VARY_PROTO
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/chapcom/w/index.php
@@ -443,7 +450,8 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://searchcom.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://searchcom.wikimedia.org/$1 [R=301,L,E=RW_VARY_PROTO]
+    Header always merge Vary X-Forwarded-Proto env=RW_VARY_PROTO
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/searchcom/w/index.php
@@ -551,7 +559,8 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://office.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://office.wikimedia.org/$1 [R=301,L,E=RW_VARY_PROTO]
+    Header always merge Vary X-Forwarded-Proto env=RW_VARY_PROTO
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/office/w/index.php
@@ -584,7 +593,8 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://chair.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://chair.wikimedia.org/$1 [R=301,L,E=RW_VARY_PROTO]
+    Header always merge Vary X-Forwarded-Proto env=RW_VARY_PROTO
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/chair/w/index.php
@@ -651,7 +661,8 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://auditcom.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://auditcom.wikimedia.org/$1 [R=301,L,E=RW_VARY_PROTO]
+    Header always merge Vary X-Forwarded-Proto env=RW_VARY_PROTO
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/auditcom/w/index.php
@@ -721,7 +732,8 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://otrs-wiki.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://otrs-wiki.wikimedia.org/$1 [R=301,L,E=RW_VARY_PROTO]
+    Header always merge Vary X-Forwarded-Proto env=RW_VARY_PROTO
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/otrs-wiki/w/index.php
@@ -753,7 +765,8 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://exec.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://exec.wikimedia.org/$1 [R=301,L,E=RW_VARY_PROTO]
+    Header always merge Vary X-Forwarded-Proto env=RW_VARY_PROTO
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/exec/w/index.php
@@ -785,7 +798,8 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://collab.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://collab.wikimedia.org/$1 [R=301,L,E=RW_VARY_PROTO]
+    Header always merge Vary X-Forwarded-Proto env=RW_VARY_PROTO
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/collab/w/index.php
@@ -852,7 +866,8 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://movementroles.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://movementroles.wikimedia.org/$1 [R=301,L,E=RW_VARY_PROTO]
+    Header always merge Vary X-Forwarded-Proto env=RW_VARY_PROTO
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/movementroles/w/index.php
@@ -884,7 +899,8 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://checkuser.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://checkuser.wikimedia.org/$1 [R=301,L,E=RW_VARY_PROTO]
+    Header always merge Vary X-Forwarded-Proto env=RW_VARY_PROTO
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/checkuser/w/index.php
@@ -916,7 +932,8 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://steward.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://steward.wikimedia.org/$1 [R=301,L,E=RW_VARY_PROTO]
+    Header always merge Vary X-Forwarded-Proto env=RW_VARY_PROTO
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/steward/w/index.php
@@ -948,7 +965,8 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://ombudsmen.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://ombudsmen.wikimedia.org/$1 [R=301,L,E=RW_VARY_PROTO]
+    Header always merge Vary X-Forwarded-Proto env=RW_VARY_PROTO
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/ombudsmen/w/index.php
