--- a/wikimedia.conf
+++ b/wikimedia.conf
@@ -127,7 +127,8 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://transitionteam.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://transitionteam.wikimedia.org/$1 [R=301,L,E=RW_VARY_PROTO]
+    Header always merge Vary X-Forwarded-Proto env=RW_VARY_PROTO
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/transitionteam/w/index.php
@@ -159,7 +160,8 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://iegcom.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://iegcom.wikimedia.org/$1 [R=301,L,E=RW_VARY_PROTO]
+    Header always merge Vary X-Forwarded-Proto env=RW_VARY_PROTO
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/iegcom/w/index.php
