--- a/wikimania.conf
+++ b/wikimania.conf
@@ -61,7 +61,8 @@
 
     RewriteEngine On
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule ^/(.*)$ https://wikimaniateam.wikimedia.org/$1 [R=301,L]
+    RewriteRule ^/(.*)$ https://wikimaniateam.wikimedia.org/$1 [R=301,L,E=RW_VARY_PROTO]
+    Header always merge Vary X-Forwarded-Proto env=RW_VARY_PROTO
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/wikimedia.org/w/index.php
