--- a/main.conf
+++ b/main.conf
@@ -288,7 +288,8 @@
 
     # Push to SSL
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule (.) https://donate.wikimedia.org%{REQUEST_URI} [R=301]
+    RewriteRule (.) https://donate.wikimedia.org%{REQUEST_URI} [R=301,L,E=ProtoRedirect]
+    Header always merge Vary X-Forwarded-Proto env=ProtoRedirect
 
     RewriteRule ^/$ https://donate.wikimedia.org/wiki/Special:FundraiserRedirector [R=302,L]
 
@@ -326,7 +327,8 @@
 
     # Push to SSL
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule (.) https://vote.wikimedia.org%{REQUEST_URI} [R=301]
+    RewriteRule (.) https://vote.wikimedia.org%{REQUEST_URI} [R=301,L,E=ProtoRedirect]
+    Header always merge Vary X-Forwarded-Proto env=ProtoRedirect
 
     <Directory "/usr/local/apache/common/docroot/vote/w">
         <IfModule mod_php5.c>
