redirect ukwikimedia to wikimedia.org.uk
Bug: 56938
RT: 6853
Change-Id: I0420d51deb7ccd61e62cc22297bf5814148eafc4

--- a/redirects.conf
+++ b/redirects.conf
@@ -348,6 +348,7 @@
 	kr.wikimedia.org \
 	pk.wikimedia.org \
 	pt.wikimedia.org \
+	uk.wikimedia.org \
 	ve.wikimedia.org \
 	wikimania.wikimedia.org \
 	labs.wikimedia.org \
@@ -883,6 +884,9 @@
 	# funnel	pt.wikimedia.org	http://wikimedia.pt/
 	RewriteCond %{HTTP_HOST} =pt.wikimedia.org
 	RewriteRule . http://wikimedia.pt/ [R=301,L,NE]
+	# rewrite	uk.wikimedia.org	https://wikimedia.org.uk/
+	RewriteCond %{HTTP_HOST} =uk.wikimedia.org
+	RewriteRule .* https://wikimedia.org.uk$0 [R=301,L,NE]
 	# rewrite	ve.wikimedia.org	http://wikimedia.org.ve
 	RewriteCond %{HTTP_HOST} =ve.wikimedia.org
 	RewriteRule .* http://wikimedia.org.ve$0 [R=301,L,NE]
