--- a/main.conf
+++ b/main.conf
@@ -105,12 +105,13 @@
     RewriteRule ^/$ /w/index.php
     RewriteRule ^/w/$ /w/index.php
 
-    # bug 45005
-    # redirect wikidata.org to www.wikidata.org
-    RewriteCond %{HTTP_HOST} =wikidata.org
-    RewriteRule ^(.*)$ http://www.wikidata.org$1 [R=301,L,NE]
+    # Bug 45005 and 54273
+    # Redirect wikidata.org, en.wikidata.org and such to www.wikidata.org
+    RewriteCond %{HTTP_HOST} !^www\.wikidata\.org [NC]
+    RewriteCond %{HTTP_HOST} !^$
+    RewriteRule ^(.*) http://www.wikidata.org$1 [R=301,L,NE]
 
-    # rewrite /entity/ URLs for wikidata per
+    # Rewrite /entity/ URLs for wikidata per
     # https://meta.wikimedia.org/wiki/Wikidata/Notes/URI_scheme
     RewriteRule ^/entity/(.*)$ https://www.wikidata.org/wiki/Special:EntityData/$1 [R=303,QSA]
 
