Apache config for legalteamwiki
Patch to assist with setup but not yet done on the servers
Mediawiki-config patch at I495e024494d0a978

Bug: 61222
Change-Id: Ia840ba70a097510bd895cc0cdb60ab466023c4d8

--- a/wikimedia.conf
+++ b/wikimedia.conf
@@ -188,6 +188,43 @@
     </Directory>
 </VirtualHost>
 
+# legalteamwiki bugzilla:61222
+<VirtualHost *>
+    DocumentRoot "/usr/local/apache/common/docroot/legalteam"
+    ServerName legalteam.wikimedia.org
+
+    AllowEncodedSlashes On
+
+    RewriteEngine On
+    RewriteCond %{HTTP:X-Forwarded-Proto} !https
+    RewriteRule ^/(.*)$ https://legalteam.wikimedia.org/$1 [R=301,L]
+
+    # Primary wiki redirector:
+    Alias /wiki /usr/local/apache/common/docroot/legalteam/w/index.php
+    RewriteRule ^/$ /w/index.php
+
+    # UseMod compatibility URLs
+    RewriteCond %{QUERY_STRING} ([^&;]+)
+    RewriteRule ^/wiki\.cgi$ /w/index.php?title=%1 [R=301,L]
+    RewriteRule ^/wiki\.cgi$ /w/index.php [R=301,L]
+
+    RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
+
+    <Directory "/usr/local/apache/common/docroot/legalteam/w">
+        <IfModule mod_php5.c>
+            php_admin_flag engine on
+        </IfModule>
+    </Directory>
+    <Directory "/usr/local/apache/common/docroot/legalteam/w/extensions">
+        <IfModule mod_php5.c>
+            php_admin_flag engine off
+        </IfModule>
+    </Directory>
+</VirtualHost>
+
 <VirtualHost *>
     ServerName wikimedia.org
     Redirect permanent / http://www.wikimedia.org/
